# frontend-sdl-cpp

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
docs/: building.md  network-api.md
src/: AudioCapture.cpp  AudioCaptureImpl_SDL.cpp  AudioCaptureImpl_SDL.h  AudioCaptureImpl_WASAPI.cpp  AudioCaptureImpl_WASAPI.h  CMakeLists.txt  Deck.cpp  Deck.h  DecodedImage.h  ProjectMSDLApplication.cpp  ProjectMSDLApplication.h  ProjectMWrapper.cpp  ProjectMWrapper.h  RenderLoop.cpp  RenderLoop.h  SDLRenderingWindow.cpp  SDLRenderingWindow.h  VideoDeck.cpp  VideoDeck.h  VisualPostProcessor.cpp  VisualPostProcessor.h  poc_demo.cpp  poc_video_test.cpp
src/gui/: ProjectMGUI.cpp  ToastMessage.cpp  ToastMessage.h
src/network/: ApiRequestHandler.cpp  ApiRequestHandler.h  CMakeLists.txt  ConfigLayers.h  ControlCommand.h  ControlCommandQueue.cpp  ControlCommandQueue.h  HttpApiServer.cpp  HttpApiServer.h  JobRegistry.cpp  JobRegistry.h  NetworkControlSubsystem.cpp  NetworkControlSubsystem.h  PlaybackState.cpp  PlaybackState.h  PresetRepository.cpp  PresetRepository.h  ShaderChainStore.cpp  ShaderChainStore.h  StbImageImpl.cpp  TextureStore.cpp  TextureStore.h  VisualState.cpp  VisualState.h
src/notifications/: CMakeLists.txt  DisplayToastNotification.cpp  DisplayToastNotification.h  ToastOptions.h
src/resources/: projectMSDL.properties.in
test/: CMakeLists.txt  NetworkApiTest.cpp
vcpkg-overlays/projectm/: portfile.cmake  vcpkg.json
