add_library(ProjectMSDL-Network STATIC
        ApiRequestHandler.cpp
        ApiRequestHandler.h
        ConfigLayers.h
        ControlCommand.h
        ControlCommandQueue.cpp
        ControlCommandQueue.h
        HttpApiServer.cpp
        HttpApiServer.h
        JobRegistry.cpp
        JobRegistry.h
        PlaybackState.cpp
        PlaybackState.h
        PresetRepository.cpp
        PresetRepository.h
        ShaderChainStore.cpp
        ShaderChainStore.h
        StbImageImpl.cpp
        TextureStore.cpp
        TextureStore.h
        VisualState.cpp
        VisualState.h
        )

target_include_directories(ProjectMSDL-Network
        PUBLIC
        "${CMAKE_SOURCE_DIR}/src"
        PRIVATE
        "${CMAKE_SOURCE_DIR}/vendor/stb"
        )

target_link_libraries(ProjectMSDL-Network
        PUBLIC
        Poco::Foundation
        Poco::JSON
        Poco::Net
        Poco::Util
        libprojectM::projectM
        )
